# VRChat-OSC-ChatBox

./: .gitignore  README.md  pyproject.toml  requirements.txt
vrc_osc_chatbox/: __init__.py  __main__.py  config.py  constants.py  formatting.py  main.py  paths.py  system_info.py
vrc_osc_chatbox/osc/: __init__.py
vrc_osc_chatbox/ui/: __init__.py  app.py
vrc_osc_chatbox/variables/: __init__.py  catalog.py  context.py  registry.py  template.py
